@@ -1,3 +1,7 @@
+Sun Mar 13 19:37:45 2005  Alex Waugh  <alex@alexwaugh.com>
+
+	* source/module/sul.s: Fix logic for out of memory error handling.
+
 Sun Mar 13 17:34:18 2005  John Tytgat  <John.Tytgat@aaug.net>
 
 	* source/module/sul.s: error_active address doesn't need module_start
